EMAILPLT-87 - Adjusting the attachment image to no longer overlap Subject text - The header images now line up with the row images - Adjusting Demo class to correctly set the multipart and answered flags from sample json files - Adjusted the Demo jsons to return a combination of the multipart and answered flags to be able to visually test the image locations

--- a/src/main/webapp/css/email.css
+++ b/src/main/webapp/css/email.css
@@ -58,7 +58,6 @@
 .flags-header { width: 16px; *width: 30px; text-align: right; }
 .flags-header .flags-span { display:inline; background: url(../rs/famfamfam/silk/1.3/flag_red.png) no-repeat; padding-left: 16px; text-align: right; }
 .flags-header .attached-span { display:inline; background: url(../rs/famfamfam/silk/1.3/attach.png) no-repeat; padding-left: 16px; text-align: right; }
-.flags { padding: 0.1em 1em; }
 
 .unread { font-weight: bold; }
 .answered-span { display:none; }
